--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,16 @@
 name: deploy
 
-on: [deployment]
+on: [push]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
     env:
-      username: '${{secret.username}}'
-      password: '${{secret.password}}'
-      passphrase: '${{secret.passphrase}}'
-      MAVEN_GPG_SIGN_KEY: '${{secret.MAVEN_GPG_SIGN_KEY}}'
+      username: '${{secrets.username}}'
+      password: '${{secrets.password}}'
+      passphrase: '${{secrets.passphrase}}'
+      MAVEN_GPG_SIGN_KEY: '${{secrets.MAVEN_GPG_SIGN_KEY}}'
 
     steps:
     - uses: actions/checkout@v1
@@ -22,7 +22,8 @@ jobs:
       run: |
         echo -e "$MAVEN_GPG_SIGN_KEY" | gpg --import --batch -
         gpg --keyserver hkp://keyserver.ubuntu.com --recv-keys $gpgkey
-        gpg --keyring secring.gpg --export-secret-keys > $HOME/.gnupg/secring.gpg --passphrase=$passphrase
+        export GPG_TTY=$(tty)
+        gpg --keyring secring.gpg --export-secret-keys > $HOME/.gnupg/secring.gpg
         mkdir -p $HOME/.gradle && echo -e "nexusUsername=$username\nnexusPassword=$password\nsigning.keyId=$gpgkey\nsigning.password=$passphrase\nsigning.secretKeyRingFile=$HOME/.gnupg/secring.gpg" > $HOME/.gradle/gradle.properties
     - name: deploy
       run: ./gradlew clean build uploadArchives closeAndReleaseRepository
